--- a/register.html
+++ b/register.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>👤 حسابي</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>👤 إنشاء حساب</title>
   <style>
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       background: linear-gradient(to right, #1f1c2c, #928dab);
-      color: #fff;
-      padding-bottom: 140px;
+      color: white;
+      padding-bottom: 120px;
     }
 
     .account-box {
@@ -22,6 +21,7 @@
       text-align: center;
       max-width: 90%;
       box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
+      color: #ffffff;
     }
 
     .account-box h2 {
@@ -30,9 +30,14 @@
       color: #ffdd57;
     }
 
-    .account-box p {
-      font-size: 18px;
-      margin-bottom: 15px;
+    .account-box input {
+      display: block;
+      margin: 15px auto;
+      padding: 10px;
+      width: 80%;
+      border-radius: 10px;
+      border: none;
+      font-size: 16px;
     }
 
     .account-box button {
@@ -44,8 +49,6 @@
       border: none;
       border-radius: 10px;
       cursor: pointer;
-      margin-left: 10px;
-      margin-right: 10px;
     }
 
     .account-box button:hover {
@@ -75,8 +78,12 @@
 </head>
 <body>
 
-  <div class="account-box" id="account-content">
-    <!-- سيتم تعبئة المحتوى تلقائياً -->
+  <div class="account-box">
+    <h2>👤 إنشاء حساب جديد</h2>
+    <input type="text" id="name" placeholder="ادخل اسمك الكامل">
+    <input type="tel" id="phone" placeholder="ادخل رقم هاتفك">
+    <button onclick="saveAccount()">إنشاء الحساب</button>
+    <p id="status" style="margin-top: 15px;"></p>
   </div>
 
   <div class="footer">
@@ -92,22 +99,20 @@
   </div>
 
   <script>
-    const contentDiv = document.getElementById("account-content");
-    const user = JSON.parse(localStorage.getItem("user"));
+    function saveAccount() {
+      const name = document.getElementById("name").value.trim();
+      const phone = document.getElementById("phone").value.trim();
 
-    if (user && user.name && user.phone) {
-      contentDiv.innerHTML = `
-        <h2>👤 مرحباً، ${user.name}</h2>
-        <p>📞 رقم هاتفك: ${user.phone}</p>
-        <button onclick="location.href='register.html'">✏️ تعديل الحساب</button>
-      `;
-    } else {
-      contentDiv.innerHTML = `
-        <h2>👤 حسابك</h2>
-        <p>أنت غير مسجل بعد. الرجاء إنشاء حساب للاستفادة من المزايا.</p>
-        <button onclick="location.href='register.html'">➕ إنشاء حساب</button>
-      `;
+      if (!name || !phone) {
+        document.getElementById("status").textContent = "يرجى إدخال الاسم ورقم الهاتف.";
+        return;
+      }
+
+      const client = { name, phone };
+      localStorage.setItem("client_info", JSON.stringify(client));
+      document.getElementById("status").textContent = "✅ تم إنشاء الحساب بنجاح!";
     }
   </script>
+
 </body>
 </html>
