--- a/admin-orders.html
+++ b/admin-orders.html
@@ -2,7 +2,7 @@
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>📦 الطلبات المسجلة (لوحة المسؤول)</title>
   <style>
     body {
@@ -11,11 +11,13 @@
       color: #fff;
       padding: 20px;
     }
+
     h2 {
       color: gold;
       text-align: center;
       margin-bottom: 30px;
     }
+
     .order-box {
       background-color: #1e1e1e;
       padding: 20px;
@@ -23,123 +25,128 @@
       border-radius: 12px;
       box-shadow: 0 0 10px rgba(255, 255, 255, 0.1);
     }
+
     .order-box h3 {
       margin: 0 0 10px;
       color: #ffcc00;
     }
+
     .order-box p {
       margin: 4px 0;
     }
+
     .product-item {
       background: rgba(255,255,255,0.05);
       padding: 8px;
       border-radius: 8px;
       margin-top: 10px;
     }
-    .whatsapp-btn {
+
+    .whatsapp-btn, .delete-btn {
       display: inline-block;
       margin-top: 10px;
-      background-color: #25D366;
-      color: white;
       padding: 8px 16px;
       text-decoration: none;
       border-radius: 8px;
+      font-weight: bold;
     }
-    .delete-btn {
-      background-color: crimson;
+
+    .whatsapp-btn {
+      background-color: #25D366;
       color: white;
-      border: none;
-      padding: 8px 16px;
-      margin-right: 10px;
-      border-radius: 8px;
-      cursor: pointer;
     }
-    #login-section {
+
+    .delete-btn {
+      background-color: #ff4d4d;
+      color: white;
+      margin-right: 10px;
+    }
+
+    #passwordPrompt {
       text-align: center;
       margin-top: 100px;
     }
-    input[type="password"] {
+
+    #passwordPrompt input {
       padding: 10px;
-      font-size: 16px;
-      border-radius: 8px;
-      border: none;
-      width: 200px;
+      font-size: 18px;
+      width: 250px;
     }
-    button {
+
+    #passwordPrompt button {
       padding: 10px 20px;
-      font-size: 16px;
-      border-radius: 8px;
+      font-size: 18px;
       margin-top: 10px;
-      cursor: pointer;
-      background-color: gold;
-      border: none;
     }
   </style>
 </head>
 <body>
 
-<div id="login-section">
-  <h2>🔒 الرجاء إدخال كلمة المرور</h2>
-  <input type="password" id="passwordInput" placeholder="أدخل كلمة المرور">
+<div id="passwordPrompt">
+  <h2>🔐 الرجاء إدخال كلمة المرور</h2>
+  <input type="password" id="passwordInput" placeholder="كلمة المرور" />
   <br>
   <button onclick="checkPassword()">دخول</button>
 </div>
 
-<div id="orders-container" style="display:none;">
+<div id="orders-container" style="display: none;">
   <h2>📦 الطلبات المسجلة</h2>
 </div>
 
 <script>
+  const correctPassword = "7700Omar";
+
   function checkPassword() {
     const input = document.getElementById("passwordInput").value;
-    if (input === "7700Omar") {
-      document.getElementById("login-section").style.display = "none";
+    if (input === correctPassword) {
+      document.getElementById("passwordPrompt").style.display = "none";
       document.getElementById("orders-container").style.display = "block";
-      showOrders();
+      renderOrders();
     } else {
-      alert("❌ كلمة المرور غير صحيحة!");
+      alert("❌ كلمة المرور غير صحيحة");
     }
   }
 
-  function showOrders() {
+  function renderOrders() {
     const container = document.getElementById("orders-container");
     const orders = JSON.parse(localStorage.getItem("orders")) || [];
 
     if (orders.length === 0) {
       container.innerHTML += "<p style='text-align:center;'>لا توجد طلبات مسجلة بعد.</p>";
-    } else {
-      orders.forEach((order, index) => {
-        const name = order.name || "غير معروف";
-        const phone = order.phone || "غير معروف";
-
-        const box = document.createElement("div");
-        box.className = "order-box";
-        box.innerHTML = `
-          <h3>🕒 ${order.date}</h3>
-          <p>👤 الاسم: <strong>${name}</strong></p>
-          <p>📞 الهاتف: <strong>${phone}</strong></p>
-          <div>
-            <h4>🛒 المنتجات:</h4>
-            ${order.items.map(item => `
-              <div class="product-item">
-                <p><strong>${item.name}</strong></p>
-                <p>الكمية: ${item.qty || 1} | السعر: ${item.price} ريال</p>
-              </div>
-            `).join("")}
-          </div>
-          ${phone !== "غير معروف" ? `
-            <a class="whatsapp-btn" href="https://wa.me/${phone}?text=مرحباً%20${encodeURIComponent(name)}%20،%20تم%20استلام%20طلبك%20وسوف%20نقوم%20بالتواصل%20معك%20قريباً." target="_blank">📲 تواصل عبر واتساب</a>
-          ` : ""}
-          <button class="delete-btn" onclick="deleteOrder(${index})">🗑 حذف الطلب</button>
-        `;
-        container.appendChild(box);
-      });
+      return;
     }
+
+    orders.forEach((order, index) => {
+      const name = order.name || "غير معروف";
+      const phone = order.phone || "غير معروف";
+
+      const box = document.createElement("div");
+      box.className = "order-box";
+      box.innerHTML = `
+        <h3>🕒 ${order.date}</h3>
+        <p>👤 الاسم: <strong>${name}</strong></p>
+        <p>📞 الهاتف: <strong>${phone}</strong></p>
+        <div>
+          <h4>🛒 المنتجات:</h4>
+          ${order.items.map(item => `
+            <div class="product-item">
+              <p><strong>${item.name}</strong></p>
+              <p>الكمية: ${item.qty || 1} | السعر: ${item.price} ريال</p>
+            </div>
+          `).join("")}
+        </div>
+        ${phone !== "غير معروف" ? `
+          <a class="whatsapp-btn" href="https://wa.me/${phone}?text=مرحباً%20${encodeURIComponent(name)}%20،%20تم%20استلام%20طلبك%20وسوف%20نقوم%20بالتواصل%20معك%20بشأن%20الطلب." target="_blank">📲 تواصل عبر واتساب</a>
+        ` : ""}
+        <button class="delete-btn" onclick="deleteOrder(${index})">🗑 حذف الطلب</button>
+      `;
+      container.appendChild(box);
+    });
   }
 
   function deleteOrder(index) {
+    let orders = JSON.parse(localStorage.getItem("orders")) || [];
     if (confirm("هل أنت متأكد أنك تريد حذف هذا الطلب؟")) {
-      let orders = JSON.parse(localStorage.getItem("orders")) || [];
       orders.splice(index, 1);
       localStorage.setItem("orders", JSON.stringify(orders));
       location.reload();
