--- a/admin-orders.html
+++ b/admin-orders.html
@@ -60,6 +60,7 @@
       background-color: #ff4d4d;
       color: white;
       margin-right: 10px;
+      cursor: pointer;
     }
 
     #passwordPrompt {
@@ -71,12 +72,20 @@
       padding: 10px;
       font-size: 18px;
       width: 250px;
+      border-radius: 6px;
+      border: none;
+      text-align: center;
     }
 
     #passwordPrompt button {
       padding: 10px 20px;
       font-size: 18px;
       margin-top: 10px;
+      background-color: gold;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      font-weight: bold;
     }
   </style>
 </head>
@@ -93,65 +102,104 @@
   <h2>📦 الطلبات المسجلة</h2>
 </div>
 
-<script>
+<!-- Firebase SDK -->
+<script type="module">
+  // استيراد وظائف Firebase من CDN
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.6.1/firebase-app.js";
+  import { getFirestore, collection, getDocs, deleteDoc, doc, onSnapshot, query, orderBy } from "https://www.gstatic.com/firebasejs/10.6.1/firebase-firestore.js";
+
+  const firebaseConfig = {
+    apiKey: "AIzaSyBFyrDJ8SSDgOVgug8-5jeVkkXzGtGJh4U",
+    authDomain: "al-najjar-net.firebaseapp.com",
+    projectId: "al-najjar-net",
+    storageBucket: "al-najjar-net.firebasestorage.app",
+    messagingSenderId: "134313830995",
+    appId: "1:134313830995:web:7e55fb6a0099f7f8fcb4a6",
+    measurementId: "G-FSMRSQNLRR"
+  };
+
+  const app = initializeApp(firebaseConfig);
+  const db = getFirestore(app);
+
   const correctPassword = "7700Omar";
+  const passwordPrompt = document.getElementById("passwordPrompt");
+  const ordersContainer = document.getElementById("orders-container");
 
   function checkPassword() {
     const input = document.getElementById("passwordInput").value;
     if (input === correctPassword) {
-      document.getElementById("passwordPrompt").style.display = "none";
-      document.getElementById("orders-container").style.display = "block";
-      renderOrders();
+      passwordPrompt.style.display = "none";
+      ordersContainer.style.display = "block";
+      loadOrdersRealtime();
     } else {
       alert("❌ كلمة المرور غير صحيحة");
     }
   }
 
-  function renderOrders() {
-    const container = document.getElementById("orders-container");
-    const orders = JSON.parse(localStorage.getItem("orders")) || [];
+  // تحميل الطلبات من Firestore في الوقت الحقيقي
+  function loadOrdersRealtime() {
+    const ordersCol = collection(db, "orders");
+    // ترتيب الطلبات حسب الوقت تنازليًا (الأحدث أولاً)
+    const q = query(ordersCol, orderBy("date", "desc"));
 
-    if (orders.length === 0) {
-      container.innerHTML += "<p style='text-align:center;'>لا توجد طلبات مسجلة بعد.</p>";
-      return;
-    }
+    onSnapshot(q, (querySnapshot) => {
+      ordersContainer.innerHTML = "<h2>📦 الطلبات المسجلة</h2>";
 
-    orders.forEach((order, index) => {
-      const name = order.name || "غير معروف";
-      const phone = order.phone || "غير معروف";
+      if (querySnapshot.empty) {
+        ordersContainer.innerHTML += "<p style='text-align:center;'>لا توجد طلبات مسجلة بعد.</p>";
+        return;
+      }
 
-      const box = document.createElement("div");
-      box.className = "order-box";
-      box.innerHTML = `
-        <h3>🕒 ${order.date}</h3>
-        <p>👤 الاسم: <strong>${name}</strong></p>
-        <p>📞 الهاتف: <strong>${phone}</strong></p>
-        <div>
-          <h4>🛒 المنتجات:</h4>
-          ${order.items.map(item => `
-            <div class="product-item">
-              <p><strong>${item.name}</strong></p>
-              <p>الكمية: ${item.qty || 1} | السعر: ${item.price} ريال</p>
-            </div>
-          `).join("")}
-        </div>
-        ${phone !== "غير معروف" ? `
-          <a class="whatsapp-btn" href="https://wa.me/${phone}?text=مرحباً%20${encodeURIComponent(name)}%20،%20تم%20استلام%20طلبك%20وسوف%20نقوم%20بالتواصل%20معك%20بشأن%20الطلب." target="_blank">📲 تواصل عبر واتساب</a>
-        ` : ""}
-        <button class="delete-btn" onclick="deleteOrder(${index})">🗑 حذف الطلب</button>
-      `;
-      container.appendChild(box);
+      querySnapshot.forEach((docSnap) => {
+        const order = docSnap.data();
+
+        const name = order.name || "غير معروف";
+        const phone = order.phone || "غير معروف";
+        const date = order.date || "غير معروف";
+        const items = order.items || [];
+
+        const box = document.createElement("div");
+        box.className = "order-box";
+        box.innerHTML = `
+          <h3>🕒 ${date}</h3>
+          <p>👤 الاسم: <strong>${name}</strong></p>
+          <p>📞 الهاتف: <strong>${phone}</strong></p>
+          <div>
+            <h4>🛒 المنتجات:</h4>
+            ${items.map(item => `
+              <div class="product-item">
+                <p><strong>${item.name}</strong></p>
+                <p>الكمية: ${item.qty || 1} | السعر: ${item.price} ريال</p>
+              </div>
+            `).join("")}
+          </div>
+          ${phone !== "غير معروف" ? `
+            <a class="whatsapp-btn" href="https://wa.me/${phone}?text=مرحباً%20${encodeURIComponent(name)}%20،%20تم%20استلام%20طلبك%20وسوف%20نقوم%20بالتواصل%20معك%20بشأن%20الطلب." target="_blank">📲 تواصل عبر واتساب</a>
+          ` : ""}
+          <button class="delete-btn" onclick="deleteOrder('${docSnap.id}')">🗑 حذف الطلب</button>
+        `;
+
+        ordersContainer.appendChild(box);
+      });
     });
   }
 
-  function deleteOrder(index) {
-    let orders = JSON.parse(localStorage.getItem("orders")) || [];
+  // حذف طلب حسب معرف الوثيقة في Firestore
+  async function deleteOrder(docId) {
     if (confirm("هل أنت متأكد أنك تريد حذف هذا الطلب؟")) {
-      orders.splice(index, 1);
-      localStorage.setItem("orders", JSON.stringify(orders));
-      location.reload();
+      try {
+        await deleteDoc(doc(db, "orders", docId));
+        alert("✅ تم حذف الطلب بنجاح");
+      } catch (error) {
+        alert("❌ حدث خطأ أثناء حذف الطلب");
+        console.error(error);
+      }
     }
   }
+
+  // تعيين دالة الحذف إلى global لكي تكون متاحة في الزر
+  window.deleteOrder = deleteOrder;
+  window.checkPassword = checkPassword;
 </script>
 
 </body>
