--- a/admin-orders.html
+++ b/admin-orders.html
@@ -103,55 +103,50 @@
 </div>
 
 <!-- Firebase SDK -->
-<script type="module">
-  // استيراد وظائف Firebase من CDN
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.6.1/firebase-app.js";
-  import { getFirestore, collection, getDocs, deleteDoc, doc, onSnapshot, query, orderBy } from "https://www.gstatic.com/firebasejs/10.6.1/firebase-firestore.js";
+<script src="https://www.gstatic.com/firebasejs/10.6.1/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.6.1/firebase-firestore-compat.js"></script>
 
+<script>
+  const correctPassword = "7700Omar";
+  const passwordPrompt = document.getElementById("passwordPrompt");
+  const ordersContainer = document.getElementById("orders-container");
+
+  // Firebase config
   const firebaseConfig = {
     apiKey: "AIzaSyBFyrDJ8SSDgOVgug8-5jeVkkXzGtGJh4U",
     authDomain: "al-najjar-net.firebaseapp.com",
     projectId: "al-najjar-net",
-    storageBucket: "al-najjar-net.firebasestorage.app",
+    storageBucket: "al-najjar-net.appspot.com",
     messagingSenderId: "134313830995",
     appId: "1:134313830995:web:7e55fb6a0099f7f8fcb4a6",
     measurementId: "G-FSMRSQNLRR"
   };
 
-  const app = initializeApp(firebaseConfig);
-  const db = getFirestore(app);
-
-  const correctPassword = "7700Omar";
-  const passwordPrompt = document.getElementById("passwordPrompt");
-  const ordersContainer = document.getElementById("orders-container");
+  firebase.initializeApp(firebaseConfig);
+  const db = firebase.firestore();
 
   function checkPassword() {
     const input = document.getElementById("passwordInput").value;
     if (input === correctPassword) {
       passwordPrompt.style.display = "none";
       ordersContainer.style.display = "block";
-      loadOrdersRealtime();
+      loadOrders();
     } else {
       alert("❌ كلمة المرور غير صحيحة");
     }
   }
 
-  // تحميل الطلبات من Firestore في الوقت الحقيقي
-  function loadOrdersRealtime() {
-    const ordersCol = collection(db, "orders");
-    // ترتيب الطلبات حسب الوقت تنازليًا (الأحدث أولاً)
-    const q = query(ordersCol, orderBy("date", "desc"));
+  function loadOrders() {
+    ordersContainer.innerHTML = "<h2>📦 الطلبات المسجلة</h2>";
 
-    onSnapshot(q, (querySnapshot) => {
-      ordersContainer.innerHTML = "<h2>📦 الطلبات المسجلة</h2>";
-
-      if (querySnapshot.empty) {
+    db.collection("orders").orderBy("date", "desc").onSnapshot((snapshot) => {
+      if (snapshot.empty) {
         ordersContainer.innerHTML += "<p style='text-align:center;'>لا توجد طلبات مسجلة بعد.</p>";
         return;
       }
 
-      querySnapshot.forEach((docSnap) => {
-        const order = docSnap.data();
+      snapshot.forEach((doc) => {
+        const order = doc.data();
 
         const name = order.name || "غير معروف";
         const phone = order.phone || "غير معروف";
@@ -176,7 +171,7 @@
           ${phone !== "غير معروف" ? `
             <a class="whatsapp-btn" href="https://wa.me/${phone}?text=مرحباً%20${encodeURIComponent(name)}%20،%20تم%20استلام%20طلبك%20وسوف%20نقوم%20بالتواصل%20معك%20بشأن%20الطلب." target="_blank">📲 تواصل عبر واتساب</a>
           ` : ""}
-          <button class="delete-btn" onclick="deleteOrder('${docSnap.id}')">🗑 حذف الطلب</button>
+          <button class="delete-btn" onclick="deleteOrder('${doc.id}')">🗑 حذف الطلب</button>
         `;
 
         ordersContainer.appendChild(box);
@@ -184,22 +179,13 @@
     });
   }
 
-  // حذف طلب حسب معرف الوثيقة في Firestore
-  async function deleteOrder(docId) {
+  function deleteOrder(docId) {
     if (confirm("هل أنت متأكد أنك تريد حذف هذا الطلب؟")) {
-      try {
-        await deleteDoc(doc(db, "orders", docId));
-        alert("✅ تم حذف الطلب بنجاح");
-      } catch (error) {
-        alert("❌ حدث خطأ أثناء حذف الطلب");
-        console.error(error);
-      }
+      db.collection("orders").doc(docId).delete()
+        .then(() => alert("✅ تم حذف الطلب"))
+        .catch((error) => alert("❌ حدث خطأ: " + error));
     }
   }
-
-  // تعيين دالة الحذف إلى global لكي تكون متاحة في الزر
-  window.deleteOrder = deleteOrder;
-  window.checkPassword = checkPassword;
 </script>
 
 </body>
