--- a/cart.html
+++ b/cart.html
@@ -1,255 +1,295 @@
-<!DOCTYPE html>  <html lang="ar" dir="rtl">  
-<head>  
-  <meta charset="UTF-8" />  
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>  
-  <title>🛒 سلة المشتريات</title>  
-  <link rel="stylesheet" href="style.css">  
-  <style>  
-    body {  
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;  
-      background: linear-gradient(to right, #1f1c2c, #928dab);  
-      color: #fff;  
-      padding-bottom: 140px;  
-    }  
-    h2 {  
-      text-align: center;  
-      color: gold;  
-      margin-top: 20px;  
-    }  
-    .cart-container {  
-      max-width: 900px;  
-      margin: 30px auto;  
-    }  
-    .cart-item {  
-      display: flex;  
-      align-items: center;  
-      background: rgba(255, 255, 255, 0.05);  
-      margin-bottom: 20px;  
-      padding: 15px;  
-      border-radius: 12px;  
-      box-shadow: 0 4px 12px rgba(0,0,0,0.3);  
-    }  
-    .cart-item img {  
-      width: 80px;  
-      height: 80px;  
-      border-radius: 8px;  
-      margin-left: 15px;  
-    }  
-    .cart-item-info {  
-      flex: 1;  
-    }  
-    .cart-item-info h4 {  
-      margin: 0 0 10px;  
-      font-size: 18px;  
-    }  
-    .cart-item-info p {  
-      margin: 0 0 8px;  
-      font-size: 16px;  
-    }  
-    .qty-controls {  
-      display: flex;  
-      align-items: center;  
-      gap: 10px;  
-    }  
-    .qty-btn {  
-      background-color: gold;  
-      color: #000;  
-      border: none;  
-      font-size: 18px;  
-      width: 30px;  
-      height: 30px;  
-      border-radius: 6px;  
-      cursor: pointer;  
-    }  
-    .qty-display {  
-      min-width: 30px;  
-      text-align: center;  
-      font-weight: bold;  
-    }  
-    .remove-btn {  
-      background-color: #ff4d4d;  
-      border: none;  
-      color: white;  
-      padding: 8px 12px;  
-      margin-right: 10px;  
-      border-radius: 8px;  
-      cursor: pointer;  
-    }  
-    .remove-btn:hover {  
-      background-color: #e60000;  
-    }  
-    .total-box {  
-      text-align: center;  
-      font-size: 20px;  
-      margin-top: 30px;  
-      background: #fff;  
-      color: #333;  
-      padding: 15px;  
-      border-radius: 12px;  
-    }  
-    .checkout-btn {  
-      display: block;  
-      margin: 20px auto;  
-      background-color: gold;  
-      border: none;  
-      padding: 12px 25px;  
-      font-size: 18px;  
-      border-radius: 10px;  
-      cursor: pointer;  
-    }  
-    .checkout-btn:hover {  
-      background-color: orange;  
-    }  
-    .footer {  
-      position: fixed;  
-      bottom: 0;  
-      width: 100%;  
-      background-color: #f8f8f8;  
-      border-top: 2px solid #ccc;  
-    }  
-    .footer td {  
-      text-align: center;  
-      padding: 10px;  
-      font-size: 14px;  
-    }  
-    .footer a {  
-      text-decoration: none;  
-      color: #333;  
-      font-weight: bold;  
-    }  
-    .account-warning {  
-      text-align: center;  
-      margin-top: 20px;  
-      color: #ffcc00;  
-    }  
-    .create-account-btn {  
-      display: block;  
-      margin: 10px auto;  
-      background-color: #ffcc00;  
-      color: #000;  
-      border: none;  
-      padding: 10px 20px;  
-      font-size: 16px;  
-      border-radius: 8px;  
-      cursor: pointer;  
-    }  
-    .create-account-btn:hover {  
-      background-color: #e6b800;  
-    }  
-  </style>  
-</head>  
-<body>    <h2>🛒 سلة المشتريات</h2>    <div class="cart-container" id="cart-items">  
-    <!-- المنتجات ستظهر هنا -->  
-  </div>    <div class="total-box" id="total-price">  
-    <!-- السعر الإجمالي -->  
-  </div>  <button class="checkout-btn" onclick="checkout()">✅ إتمام الطلب</button>
+<!DOCTYPE html>
+<html lang="ar" dir="rtl">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>🛒 سلة المشتريات</title>
+  <link rel="stylesheet" href="style.css">
+  <style>
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: linear-gradient(to right, #1f1c2c, #928dab);
+      color: #fff;
+      padding-bottom: 140px;
+    }
+    h2 {
+      text-align: center;
+      color: gold;
+      margin-top: 20px;
+    }
+    .cart-container {
+      max-width: 900px;
+      margin: 30px auto;
+    }
+    .cart-item {
+      display: flex;
+      align-items: center;
+      background: rgba(255, 255, 255, 0.05);
+      margin-bottom: 20px;
+      padding: 15px;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.3);
+    }
+    .cart-item img {
+      width: 80px;
+      height: 80px;
+      border-radius: 8px;
+      margin-left: 15px;
+    }
+    .cart-item-info {
+      flex: 1;
+    }
+    .cart-item-info h4 {
+      margin: 0 0 10px;
+      font-size: 18px;
+    }
+    .cart-item-info p {
+      margin: 0 0 8px;
+      font-size: 16px;
+    }
+    .qty-controls {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+    }
+    .qty-btn {
+      background-color: gold;
+      color: #000;
+      border: none;
+      font-size: 18px;
+      width: 30px;
+      height: 30px;
+      border-radius: 6px;
+      cursor: pointer;
+    }
+    .qty-display {
+      min-width: 30px;
+      text-align: center;
+      font-weight: bold;
+    }
+    .remove-btn {
+      background-color: #ff4d4d;
+      border: none;
+      color: white;
+      padding: 8px 12px;
+      margin-right: 10px;
+      border-radius: 8px;
+      cursor: pointer;
+    }
+    .remove-btn:hover {
+      background-color: #e60000;
+    }
+    .total-box {
+      text-align: center;
+      font-size: 20px;
+      margin-top: 30px;
+      background: #fff;
+      color: #333;
+      padding: 15px;
+      border-radius: 12px;
+    }
+    .checkout-btn {
+      display: block;
+      margin: 20px auto;
+      background-color: gold;
+      border: none;
+      padding: 12px 25px;
+      font-size: 18px;
+      border-radius: 10px;
+      cursor: pointer;
+    }
+    .checkout-btn:hover {
+      background-color: orange;
+    }
+    .footer {
+      position: fixed;
+      bottom: 0;
+      width: 100%;
+      background-color: #f8f8f8;
+      border-top: 2px solid #ccc;
+    }
+    .footer td {
+      text-align: center;
+      padding: 10px;
+      font-size: 14px;
+    }
+    .footer a {
+      text-decoration: none;
+      color: #333;
+      font-weight: bold;
+    }
+    .account-warning {
+      text-align: center;
+      margin-top: 20px;
+      color: #ffcc00;
+    }
+    .create-account-btn {
+      display: block;
+      margin: 10px auto;
+      background-color: #ffcc00;
+      color: #000;
+      border: none;
+      padding: 10px 20px;
+      font-size: 16px;
+      border-radius: 8px;
+      cursor: pointer;
+    }
+    .create-account-btn:hover {
+      background-color: #e6b800;
+    }
+  </style>
+</head>
+<body>
+  <h2>🛒 سلة المشتريات</h2>
+  <div class="cart-container" id="cart-items">
+    <!-- المنتجات ستظهر هنا -->
+  </div>
+  <div class="total-box" id="total-price">
+    <!-- السعر الإجمالي -->
+  </div>
+  <button class="checkout-btn" onclick="checkout()">✅ إتمام الطلب</button>
 
-  <div id="account-warning" class="account-warning" style="display: none;">  
-    ⚠️ يجب عليك أولًا إنشاء حساب قبل إتمام الطلب.  
-    <button class="create-account-btn" onclick="window.location.href='signup.html'">🔐 إنشاء حساب الآن</button>  
-  </div>    <div class="footer">  
-    <table width="100%">  
-      <tr align="center">  
-        <td><a href="2simpl.html">🏠<br>الرئيسية</a></td>  
-        <td><a href="offers.html">📢<br>العروض</a></td>  
-        <td><a href="cart.html">🛒<br>السلة</a></td>  
-        <td><a href="orders.html">📦<br>طلباتي</a></td>  
-        <td><a href="menu.html">☰<br>القائمة</a></td>  
-      </tr>  
-    </table>  
-  </div>    <script>  
-    const cartContainer = document.getElementById("cart-items");  
-    const totalPriceEl = document.getElementById("total-price");  
-    const warningBox = document.getElementById("account-warning");  
-  
-    let cart = JSON.parse(localStorage.getItem("cart")) || [];  
-  
-    function renderCart() {  
-      cartContainer.innerHTML = "";  
-      let total = 0;  
-  
-      if (cart.length === 0) {  
-        cartContainer.innerHTML = "<p style='text-align:center;'>🛒 لا توجد منتجات في السلة.</p>";  
-        totalPriceEl.textContent = "";  
-        return;  
-      }  
-  
-      cart.forEach((item, index) => {  
-        let itemQty = item.qty || 1;  
-        let itemTotal = item.price * itemQty;  
-        total += itemTotal;  
-  
-        const productHTML = `  
-          <div class="cart-item">  
-            <img src="${item.image}" alt="${item.name}">  
-            <div class="cart-item-info">  
-              <h4>${item.name}</h4>  
-              <p>السعر: ${item.price} ريال</p>  
-              <div class="qty-controls">  
-                <button class="qty-btn" onclick="changeQty(${index}, -1)">−</button>  
-                <div class="qty-display">${itemQty}</div>  
-                <button class="qty-btn" onclick="changeQty(${index}, 1)">+</button>  
-              </div>  
-            </div>  
-            <button class="remove-btn" onclick="removeFromCart(${index})">🗑 حذف</button>  
-          </div>  
-        `;  
-        cartContainer.innerHTML += productHTML;  
-      });  
-  
-      totalPriceEl.textContent = `الإجمالي: ${total} ريال`;  
-    }  
-  
-    function changeQty(index, delta) {  
-      cart[index].qty = Math.max(1, (cart[index].qty || 1) + delta);  
-      localStorage.setItem("cart", JSON.stringify(cart));  
-      renderCart();  
-    }  
-  
-    function removeFromCart(index) {  
-      cart.splice(index, 1);  
-      localStorage.setItem("cart", JSON.stringify(cart));  
-      renderCart();  
-    }  
-  
-    function checkout() {  
-      if (cart.length === 0) {  
-        alert("🛒 سلتك فارغة!");  
-        return;  
-      }  
-  
-      const client = JSON.parse(localStorage.getItem("client_info"));  
-  
-      if (!client || !client.name || !client.phone) {  
-        warningBox.style.display = "block";  
-        return;  
-      }  
-  
-      let orders = JSON.parse(localStorage.getItem("orders")) || [];  
-      orders.push({ date: new Date().toLocaleString(), name: client.name, phone: client.phone, items: cart });  
-      localStorage.setItem("orders", JSON.stringify(orders));  
-  
-      alert("✅ تم تسجيل طلبك، سيتم التواصل معك قريباً!");  
-  
-      const sendToWhatsApp = confirm("هل تريد إرسال طلبك أيضًا عبر واتساب؟");  
-  
-      if (sendToWhatsApp) {  
-        const message =  
-          `طلب جديد من ${client.name}%0A` +  
-          `📞 رقم الهاتف: ${client.phone}%0A` +  
-          `🛒 المنتجات:%0A` +  
-          cart.map(item => `- ${item.name} × ${item.qty || 1}`).join("%0A") +  
-          `%0A📦 الإجمالي: ${cart.reduce((sum, item) => sum + item.price * (item.qty || 1), 0)} ريال`;  
-  
-        const whatsappUrl = `https://wa.me/967772417102?text=${message}`;  
-        window.open(whatsappUrl, "_blank");  
-      }  
-  
-      cart = [];  
-      localStorage.setItem("cart", JSON.stringify(cart));  
-      renderCart();  
-    }  
-  
-    renderCart();  
-  </script>  </body>  
-</html> 
+  <div id="account-warning" class="account-warning" style="display: none;">
+    ⚠️ يجب عليك أولًا إنشاء حساب قبل إتمام الطلب.
+    <button class="create-account-btn" onclick="window.location.href='signup.html'">🔐 إنشاء حساب الآن</button>
+  </div>
+  <div class="footer">
+    <table width="100%">
+      <tr align="center">
+        <td><a href="2simpl.html">🏠<br>الرئيسية</a></td>
+        <td><a href="offers.html">📢<br>العروض</a></td>
+        <td><a href="cart.html">🛒<br>السلة</a></td>
+        <td><a href="orders.html">📦<br>طلباتي</a></td>
+        <td><a href="menu.html">☰<br>القائمة</a></td>
+      </tr>
+    </table>
+  </div>
+
+  <!-- إضافة مكتبات Firebase هنا -->
+  <script src="https://www.gstatic.com/firebasejs/10.6.1/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.6.1/firebase-firestore-compat.js"></script>
+
+  <script>
+    const cartContainer = document.getElementById("cart-items");
+    const totalPriceEl = document.getElementById("total-price");
+    const warningBox = document.getElementById("account-warning");
+
+    let cart = JSON.parse(localStorage.getItem("cart")) || [];
+
+    function renderCart() {
+      cartContainer.innerHTML = "";
+      let total = 0;
+
+      if (cart.length === 0) {
+        cartContainer.innerHTML = "<p style='text-align:center;'>🛒 لا توجد منتجات في السلة.</p>";
+        totalPriceEl.textContent = "";
+        return;
+      }
+
+      cart.forEach((item, index) => {
+        let itemQty = item.qty || 1;
+        let itemTotal = item.price * itemQty;
+        total += itemTotal;
+
+        const productHTML = `
+          <div class="cart-item">
+            <img src="${item.image}" alt="${item.name}">
+            <div class="cart-item-info">
+              <h4>${item.name}</h4>
+              <p>السعر: ${item.price} ريال</p>
+              <div class="qty-controls">
+                <button class="qty-btn" onclick="changeQty(${index}, -1)">−</button>
+                <div class="qty-display">${itemQty}</div>
+                <button class="qty-btn" onclick="changeQty(${index}, 1)">+</button>
+              </div>
+            </div>
+            <button class="remove-btn" onclick="removeFromCart(${index})">🗑 حذف</button>
+          </div>
+        `;
+        cartContainer.innerHTML += productHTML;
+      });
+
+      totalPriceEl.textContent = `الإجمالي: ${total} ريال`;
+    }
+
+    function changeQty(index, delta) {
+      cart[index].qty = Math.max(1, (cart[index].qty || 1) + delta);
+      localStorage.setItem("cart", JSON.stringify(cart));
+      renderCart();
+    }
+
+    function removeFromCart(index) {
+      cart.splice(index, 1);
+      localStorage.setItem("cart", JSON.stringify(cart));
+      renderCart();
+    }
+
+    function checkout() {
+      if (cart.length === 0) {
+        alert("🛒 سلتك فارغة!");
+        return;
+      }
+
+      const client = JSON.parse(localStorage.getItem("client_info"));
+
+      if (!client || !client.name || !client.phone) {
+        warningBox.style.display = "block";
+        return;
+      }
+
+      let orders = JSON.parse(localStorage.getItem("orders")) || [];
+      orders.push({ date: new Date().toLocaleString(), name: client.name, phone: client.phone, items: cart });
+      localStorage.setItem("orders", JSON.stringify(orders));
+
+      // إرسال الطلب إلى Firestore
+      try {
+        const firebaseConfig = {
+          apiKey: "AIzaSyBFyrDJ8SSDgOVgug8-5jeVkkXzGtGJh4U",
+          authDomain: "al-najjar-net.firebaseapp.com",
+          projectId: "al-najjar-net",
+          storageBucket: "al-najjar-net.appspot.com",
+          messagingSenderId: "134313830995",
+          appId: "1:134313830995:web:7e55fb6a0099f7f8fcb4a6",
+          measurementId: "G-FSMRSQNLRR"
+        };
+
+        if (!firebase.apps.length) {
+          firebase.initializeApp(firebaseConfig);
+        }
+
+        const db = firebase.firestore();
+        db.collection("orders").add({
+          name: client.name,
+          phone: client.phone,
+          items: cart,
+          date: new Date().toLocaleString()
+        });
+      } catch (e) {
+        console.error("لم يتم إرسال الطلب إلى السحابة:", e);
+      }
+
+      alert("✅ تم تسجيل طلبك، سيتم التواصل معك قريباً!");
+
+      const sendToWhatsApp = confirm("هل تريد إرسال طلبك أيضًا عبر واتساب؟");
+
+      if (sendToWhatsApp) {
+        const message =
+          `طلب جديد من ${client.name}%0A` +
+          `📞 رقم الهاتف: ${client.phone}%0A` +
+          `🛒 المنتجات:%0A` +
+          cart.map(item => `- ${item.name} × ${item.qty || 1}`).join("%0A") +
+          `%0A📦 الإجمالي: ${cart.reduce((sum, item) => sum + item.price * (item.qty || 1), 0)} ريال`;
+
+        const whatsappUrl = `https://wa.me/967772417102?text=${message}`;
+        window.open(whatsappUrl, "_blank");
+      }
+
+      cart = [];
+      localStorage.setItem("cart", JSON.stringify(cart));
+      renderCart();
+    }
+
+    renderCart();
+  </script>
+</body>
+</html>
